feat(plugin): adapter plugin -- iotdb

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -25,6 +25,7 @@ datacap-plugin-ignite=plugin/datacap-plugin-ignite/pom.xml
 datacap-plugin-impala=plugin/datacap-plugin-impala/pom.xml
 datacap-plugin-kylin=plugin/datacap-plugin-kylin/pom.xml
 datacap-plugin-timescale=plugin/datacap-plugin-timescale/pom.xml
+datacap-plugin-iotdb=plugin/datacap-plugin-iotdb/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
