--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,7 @@
         <module>plugin/datacap-plugin-impala</module>
         <module>plugin/datacap-plugin-kylin</module>
         <module>plugin/datacap-plugin-timescale</module>
-        <!--        <module>plugin/datacap-jdbc-elasticsearch</module>-->
-        <!--        <module>plugin/datacap-jdbc-h2</module>-->
-        <!--        <module>plugin/datacap-jdbc-iotdb</module>-->
+        <module>plugin/datacap-plugin-iotdb</module>
         <!--        <module>plugin/datacap-jdbc-monetdb</module>-->
         <!--        <module>plugin/datacap-jdbc-mongo</module>-->
         <!--        <module>plugin/datacap-jdbc-ydb</module>-->
@@ -77,6 +75,8 @@
         <!--        <module>plugin/datacap-http-ceresdb</module>-->
         <!--        <module>plugin/datacap-http-greptime</module>-->
         <!--        <module>plugin/datacap-http-questdb</module>-->
+        <!--        <module>plugin/datacap-jdbc-h2</module>-->
+        <!--        <module>plugin/datacap-jdbc-elasticsearch</module>-->
         <!--        <module>plugin/datacap-plugin-mongo-community</module>-->
         <module>executor/datacap-executor-spi</module>
         <module>executor/datacap-executor-local</module>
