--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -27,6 +27,8 @@ datacap-plugin-kylin=plugin/datacap-plugin-kylin/pom.xml
 datacap-plugin-timescale=plugin/datacap-plugin-timescale/pom.xml
 datacap-plugin-iotdb=plugin/datacap-plugin-iotdb/pom.xml
 datacap-plugin-monetdb=plugin/datacap-plugin-monetdb/pom.xml
+datacap-plugin-ydb=plugin/datacap-plugin-ydb/pom.xml
+datacap-plugin-neo4j=plugin/datacap-plugin-neo4j/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
