feat(plugin): adapter plugin -- oceanbase

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -29,6 +29,7 @@ datacap-plugin-iotdb=plugin/datacap-plugin-iotdb/pom.xml
 datacap-plugin-monetdb=plugin/datacap-plugin-monetdb/pom.xml
 datacap-plugin-ydb=plugin/datacap-plugin-ydb/pom.xml
 datacap-plugin-neo4j=plugin/datacap-plugin-neo4j/pom.xml
+datacap-plugin-oceanbase=plugin/datacap-plugin-oceanbase/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
