--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <module>plugin/datacap-plugin-monetdb</module>
         <module>plugin/datacap-plugin-ydb</module>
         <module>plugin/datacap-plugin-neo4j</module>
-        <!--        <module>plugin/datacap-jdbc-oceanbase</module>-->
+        <module>plugin/datacap-plugin-oceanbase</module>
         <!--        <module>plugin/datacap-jdbc-oracle</module>-->
         <!--        <module>plugin/datacap-jdbc-phoenix</module>-->
         <!--        <module>plugin/datacap-jdbc-postgresql</module>-->
