feat(plugin): adapter plugin -- phoenix

--- a/plugin/datacap-plugin-phoenix/pom.xml
+++ b/plugin/datacap-plugin-phoenix/pom.xml
@@ -10,12 +10,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>datacap-jdbc-phoenix</artifactId>
-    <description>DataCap - Apache Phoenix</description>
+    <artifactId>datacap-plugin-phoenix</artifactId>
+    <description>DataCap - Plugin - Apache Phoenix</description>
 
     <properties>
         <phoenix.version>5.2.0</phoenix.version>
-        <plugin.name>jdbc-phoenix</plugin.name>
     </properties>
 
     <dependencies>
@@ -24,11 +23,6 @@
             <artifactId>datacap-spi</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.phoenix/phoenix-core -->
         <dependency>
             <groupId>org.apache.phoenix</groupId>
             <artifactId>phoenix-core</artifactId>
@@ -58,6 +52,10 @@
                     <groupId>com.google.code.gson</groupId>
                     <artifactId>gson</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
@@ -81,6 +79,24 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                            <excludeScope>provided</excludeScope>
+                            <includeScope>runtime</includeScope>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
