--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <module>plugin/datacap-plugin-neo4j</module>
         <module>plugin/datacap-plugin-oceanbase</module>
         <module>plugin/datacap-plugin-oracle</module>
-        <!--        <module>plugin/datacap-jdbc-phoenix</module>-->
+        <module>plugin/datacap-plugin-phoenix</module>
         <!--        <module>plugin/datacap-jdbc-postgresql</module>-->
         <!--        <module>plugin/datacap-jdbc-presto</module>-->
         <!--        <module>plugin/datacap-jdbc-redis</module>-->
