--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -36,6 +36,9 @@ datacap-plugin-postgresql=plugin/datacap-plugin-postgresql/pom.xml
 datacap-plugin-presto=plugin/datacap-plugin-presto/pom.xml
 datacap-plugin-snowflake=plugin/datacap-plugin-snowflake/pom.xml
 datacap-plugin-sqlserver=plugin/datacap-plugin-sqlserver/pom.xml
+datacap-plugin-tdengine=plugin/datacap-plugin-tdengine/pom.xml
+datacap-plugin-trino=plugin/datacap-plugin-trino/pom.xml
+datacap-plugin-doris=plugin/datacap-plugin-doris/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
