feat(plugin): adapter plugin -- starrocks and hologres

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -39,6 +39,8 @@ datacap-plugin-sqlserver=plugin/datacap-plugin-sqlserver/pom.xml
 datacap-plugin-tdengine=plugin/datacap-plugin-tdengine/pom.xml
 datacap-plugin-trino=plugin/datacap-plugin-trino/pom.xml
 datacap-plugin-doris=plugin/datacap-plugin-doris/pom.xml
+datacap-plugin-starrocks=plugin/datacap-plugin-starrocks/pom.xml
+datacap-plugin-hologres=plugin/datacap-plugin-hologres/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
