--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -47,6 +47,9 @@ datacap-plugin-h2-tcp=plugin/datacap-plugin-h2-tcp/pom.xml
 datacap-plugin-clickhouse-http=plugin/datacap-plugin-clickhouse-http/pom.xml
 datacap-plugin-ceresdb=plugin/datacap-plugin-ceresdb/pom.xml
 datacap-plugin-redis-jdbc=plugin/datacap-plugin-redis-jdbc/pom.xml
+datacap-plugin-elasticsearch-8x=plugin/datacap-plugin-elasticsearch-8x/pom.xml
+datacap-plugin-mongo-atlas=plugin/datacap-plugin-mongo-atlas/pom.xml
+datacap-plugin-mongo-community=plugin/datacap-plugin-mongo-community/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
