--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -3,6 +3,7 @@ datacap-plugin-clickhouse=plugin/datacap-plugin-clickhouse/pom.xml
 datacap-plugin-influxdb=plugin/datacap-plugin-influxdb/pom.xml
 datacap-plugin-solr=plugin/datacap-plugin-solr/pom.xml
 datacap-plugin-cratedb=plugin/datacap-plugin-cratedb/pom.xml
+datacap-plugin-cratedb-http=plugin/datacap-plugin-cratedb-http/pom.xml
 datacap-plugin-alioss=plugin/datacap-plugin-alioss/pom.xml
 datacap-plugin-zookeeper=plugin/datacap-plugin-zookeeper/pom.xml
 datacap-plugin-kafka=plugin/datacap-plugin-kafka/pom.xml
