--- a/plugin/datacap-plugin-clickhouse-http/pom.xml
+++ b/plugin/datacap-plugin-clickhouse-http/pom.xml
@@ -31,7 +31,6 @@
                     <descriptors>
                         <descriptor>../../configure/assembly/plugin.xml</descriptor>
                     </descriptors>
-                    <outputDirectory>../../dist/plugins</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -60,6 +59,9 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
