--- a/plugin/datacap-plugin-doris/pom.xml
+++ b/plugin/datacap-plugin-doris/pom.xml
@@ -40,7 +40,6 @@
                     <descriptors>
                         <descriptor>../../configure/assembly/plugin.xml</descriptor>
                     </descriptors>
-                    <outputDirectory>../../dist/plugins</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -73,6 +72,9 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
