--- a/plugin/datacap-plugin-mongo-community/pom.xml
+++ b/plugin/datacap-plugin-mongo-community/pom.xml
@@ -46,7 +46,6 @@
                     <descriptors>
                         <descriptor>../../configure/assembly/plugin.xml</descriptor>
                     </descriptors>
-                    <outputDirectory>../../dist/plugins</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -79,6 +78,9 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
