--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,12 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>findbugs</artifactId>
             <version>${findbugs.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.apple</groupId>
+                    <artifactId>AppleJavaExtensions</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
