--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,7 +8,7 @@ repo_url: https://github.com/devlive-community/datacap
 edit_uri: "https://github.com/devlive-community/datacap/blob/dev/docs/docs"
 
 banners:
-  - title: DataCap 2024.3.11 is released
+  - title: DataCap 2024.4 is released
     link: /release-latest.html
     description: <a href="https://github.com/devlive-community/datacap" class="text-white"> Do you ❤️ DataCap? Give us a 🌟 on GitHub </a>
 
@@ -237,7 +237,8 @@ nav:
         - reference/filesystem/s3/home.md
         - reference/filesystem/minio/home.md
   - NavReleaseNote:
-      - 2024.3.11 (latest): release/latest.md
+      - 2024.4 (latest): release/latest.md
+      - 2024.3.11: release/2024.3.11.md
       - 2024.3.10: release/2024.3.10.md
       - 2024.03.9: release/2024.03.9.md
       - 2024.03.8: release/2024.03.8.md
