--- a/driver/datacap-driver-mongodb/pom.xml
+++ b/driver/datacap-driver-mongodb/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.edurt.datacap</groupId>
+            <artifactId>datacap-parser</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
