--- a/test/datacap-test-driver/pom.xml
+++ b/test/datacap-test-driver/pom.xml
@@ -19,5 +19,9 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+        </dependency>
     </dependencies>
 </project>
