feat(driver-mongodb): replace find to aggregate

--- a/test/datacap-test-driver/pom.xml
+++ b/test/datacap-test-driver/pom.xml
@@ -7,6 +7,7 @@
         <groupId>io.edurt.datacap</groupId>
         <artifactId>datacap</artifactId>
         <version>2024.4.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>datacap-test-driver</artifactId>
@@ -14,14 +15,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-driver-mongodb</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
         </dependency>
     </dependencies>
 </project>
