--- a/.github/workflows/bofore_checker.yml
+++ b/.github/workflows/bofore_checker.yml
@@ -34,6 +34,8 @@ jobs:
 
   before_checker_style:
     runs-on: ubuntu-latest
+    needs:
+      - before_checker_loading
     if: ${{ github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), '.java') || contains(join(github.event.commits.*.modified, ' '), '.kt') ||
       github.event_name == 'pull_request' && contains(join(github.event.pull_request.changed_files.*.filename, ' '), '.java') || contains(join(github.event.pull_request.changed_files.*.filename, ' '), '.kt') }}
     steps:
@@ -49,6 +51,8 @@ jobs:
 
   before_checker_bugs:
     runs-on: ubuntu-latest
+    needs:
+      - before_checker_loading
     if: ${{ github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), '.java') || contains(join(github.event.commits.*.modified, ' '), '.kt') ||
       github.event_name == 'pull_request' && contains(join(github.event.pull_request.changed_files.*.filename, ' '), '.java') || contains(join(github.event.pull_request.changed_files.*.filename, ' '), '.kt') }}
     steps:
